[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "yumi_realtime"
version = "0.0.1"
description = "YuMi Externally Guided Motion (EGM) wrapper"
authors = [
    {name = "Justin Yu", email = "yujustin@berkeley.edu"},
]
license = {text = "MIT Software License"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "viser",
    "tyro",
]

[tool.setuptools.packages.find]
exclude = ["catkin_ws*"]
